# Chat-Server

./: notes.txt
Client/: CMakeLists.txt  run.sh
Client/src/: client.cpp  client.h  main.cpp
Db/: chat.db
Server/: CMakeLists.txt  run.sh
Server/src/: db.cpp  db.h  main.cpp  old.cpp  server.cpp  server.h
src/: server.cpp  server.h
